--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vertex Innovations | Leading Technology Solutions</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" media="(max-width: 1200px)" href="styles-max-width-1200.css">
+    <link rel="stylesheet" media="(max-width: 992px)" href="styles-max-width-992.css">
+    <link rel="stylesheet" media="(max-width: 768px)" href="styles-max-width-768.css">
+    <link rel="stylesheet" media="(max-width: 576px)" href="styles-max-width-576.css">
+    <link rel="stylesheet" media="(max-width: 480px)" href="styles-max-width-480.css">
+    <link rel="stylesheet" media="(max-width: 375px)" href="styles-max-width-375.css">
+    <link rel="stylesheet" media="(max-width: 320px)" href="styles-max-width-320.css">
     <link rel="stylesheet" href="animations.css">
 </head>
 <body>
